// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="Select date"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="Select month"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 3`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="Select week"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 4`] = `
<div
  class="ant-picker ant-picker-range ant-picker-rtl"
>
  <div
    class="ant-picker-input ant-picker-input-active"
  >
    <input
      autocomplete="off"
      placeholder="Start date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-range-separator"
  >
    <span
      aria-label="to"
      class="ant-picker-separator"
    >
      <span
        aria-label="swap-right"
        class="anticon anticon-swap-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="swap-right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="End date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-active-bar"
    style="right: 0px; width: 0px; position: absolute;"
  />
  <span
    class="ant-picker-suffix"
  >
    <span
      aria-label="calendar"
      class="anticon anticon-calendar"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
        />
      </svg>
    </span>
  </span>
</div>
`;
